# snake-game

./: Cargo.toml  README.md
src/: a.json  boards.json  core.rs  main.rs  scoreboard.json  tui.rs
src/core/: board.rs  boards.rs  direction.rs  game.rs  point.rs  scoreboard.rs
src/tui/: create_board.rs  game.rs  game_over.rs  scoreboard.rs  select_board.rs
