[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
itertools = "0.13.0"
rand = "0.8.5"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tokio = { version = "1.42.0", features = ["full"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[build]
jobs = 4

[target.'cfg(unix)']
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.'cfg(windows)']
rustflags = ["-C", "link-arg=/MACHINE:X64"]

