[package]
name = "snake_game"
version = "0.1.1"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
itertools = "0.13.0"
rand = "0.8.5"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.42.0", features = ["full"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
